--- a/styles.css
+++ b/styles.css
@@ -222,7 +222,7 @@ html {
 }
 
 .container {
-  width: 1650px;
-  padding-right: 270px;
-  padding-left: 270px;
+  width: 1110px;
+  margin-right: 30px;
+  margin-left: 30px;
 }
