--- a/styles.css
+++ b/styles.css
@@ -23,9 +23,15 @@ html {
 
 /*header*/
 
+.fix {
+  margin-right: 30px;
+  margin-left: 30px;
+}
+
 .flex-container {
   display: flex;
   justify-content: space-between;
+  padding-bottom: 110px;
 }
 
 .main-list {
@@ -36,6 +42,7 @@ html {
 
 .logo {
   padding-top: 40px;
+  display: flex;
 }
 
 .list {
@@ -74,7 +81,6 @@ html {
   font-weight: 700;
   margin: 0;
   text-align: center;
-  margin-top: 110px;
   margin-bottom: 130px;
 }
 
@@ -194,8 +200,8 @@ html {
   color: var(--text-title);
   font-weight: 600;
   font-family: var(--font-family);
-  margin-top: 15px;
   margin-bottom: 45px;
+  margin-top: 0;
 }
 
 .news-text {
@@ -206,7 +212,7 @@ html {
   margin-bottom: 15px;
 }
 
-.news-button {
+.button {
   font-size: 16px;
   line-height: 1.6;
   font-weight: 300;
@@ -214,15 +220,24 @@ html {
   background-color: var(--transformation-color);
   cursor: pointer;
   border: 1px solid var(--transformation-color);
-  border-radius: 2px;
+  border-radius: 3px;
   height: 50px;
   width: 160px;
   font-family: var(--font-family);
-  margin-bottom: 80px;
+  display: flex;
+  text-decoration: none;
+  justify-content: center;
+  align-items: center;
 }
 
 .container {
   width: 1110px;
-  margin-right: 30px;
-  margin-left: 30px;
+}
+
+.news-images {
+  margin-bottom: 15px;
+}
+
+.last {
+  margin-bottom: 45px;
 }
